[tool.poetry]
name = "tesla-crawler-script"
version = "0.1.0"
description = "Tesla Crawler Script Module"
authors = ["recoma96 <seokbong60@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
